--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 #video-title {
     max-height:unset !important;
 }
+
+.ytlp-button {
+    margin-left:3px;
+    display: inline;
+    width:20px;
+    height:fit-content;
+}
+
+.ytlp-frame {
+    display: block;
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
